--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -40,7 +40,7 @@
       <div class="cards__container">
         <h2 class="cards__title container">Vagas</h2>
 
-        <ul class="cards__list ">
+        <ul class="cards__list">
           <li class="card">
             <h3 class="card__title">Pessoa desenvolvedora front-end - React JS</h3>
             <div class="info__container">
@@ -72,7 +72,7 @@
       <aside class="cart__container">
         <ul class="cart__list">
           <h2 class="cart__title">Vagas Selecionadas</h2>
-          <span class="cart__empty ">Você ainda não aplicou para nenhuma vaga</span>
+          <!-- <span class="cart__empty ">Você ainda não aplicou para nenhuma vaga</span> -->
           <li class="cart__item">
             <div class="cart__item-container">
               <h3 class="cart__item-title">Pessoa desenvolvedora front-end- React JS</h3>
